Style: fixed spacing

--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -37,7 +37,7 @@
     }
 
     .prev-next {
-
+        padding-top: 30px;
         clear:both;
         text-align: center;
 
