--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -23,3 +23,14 @@
         list-style: none;
     }
 }
+.searchinput {
+    min-height: 60px;
+
+    .date-container, .pagesize-container{
+        width: 49%;
+        float:left;
+    }
+    .pagesize-container {
+        float:right;
+    }
+}
